--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/ignatiusbill/NodeJSTestServer#readme",
   "dependencies": {
-    "body-parser": "^1.17.2",
-    "express": "^4.15.3",
-    "request": "^2.81.0"
+      "body-parser": "^1.15.0",
+      "config": "^1.20.4",
+      "ejs": "^2.4.2",
+      "express": "^4.13.4",
+      "request": "^2.72.0"
   }
 }
